--- a/project.json
+++ b/project.json
@@ -20,6 +20,9 @@
     "NETStandard.Library": "1.6.0"
   },
   "frameworks": {
+    "netstandard1.3": {
+      "imports": "dnxcore50"
+    },
     "netstandard1.6": {
       "imports": "dnxcore50"
     },
